--- a/NubeBooks/NubeBooks.csproj
+++ b/NubeBooks/NubeBooks.csproj
@@ -301,6 +301,8 @@
     <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Views\Shared\_showAlertMessages.cshtml" />
     <Content Include="Views\Admin\ComprobantesEgreso.cshtml" />
+    <Content Include="Views\Admin\EntidadesClientes.cshtml" />
+    <Content Include="Views\Admin\EntidadesProveedores.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
