--- a/NubeBooks/bin/NubeBooks.dll.config
+++ b/NubeBooks/bin/NubeBooks.dll.config
@@ -19,6 +19,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AppStartup" value="NubeBooks.Startup" />
+    <add key="MailFrom" value="evert@nube.la" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -36,6 +37,13 @@
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="evert@nube.la">
+        <network host="smtp.gmail.com" port="587" userName="evert@nube.la" password="BladeKnight7" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
