cuentas por cobrar y pagar, fecha de pago en null

--- a/NubeBooks.Data/NubeBooks.Data.csproj
+++ b/NubeBooks.Data/NubeBooks.Data.csproj
@@ -152,6 +152,9 @@
     <Compile Include="SP_Get_Arbol_Categoria_Result.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="SP_Get_CuentasPor_CobrarPagar_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="SP_Get_MontoIncompletoEnComprobante_Result.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
@@ -171,6 +174,12 @@
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_Get_StockLote_De_Lote_En_Empresa_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_Rep_AvanceDePresupuesto_Result.cs">
@@ -207,6 +216,9 @@
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_Rep_IngresosEgresos_PorMes_EnEmpresa_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TipoComprobante.cs">
