reporte 2 de inventarios y select 2

--- a/NubeBooks.Data/NubeBooks.Data.csproj
+++ b/NubeBooks.Data/NubeBooks.Data.csproj
@@ -176,6 +176,12 @@
     <Compile Include="SP_Get_StockLote_De_Lote_En_Empresa_Result.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="SP_Rep_AvanceDePresupuesto_Result.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
@@ -210,6 +216,9 @@
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_Rep_IngresosEgresos_PorMes_EnEmpresa_Result.cs">
+      <DependentUpon>LibrosModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
       <DependentUpon>LibrosModel.tt</DependentUpon>
     </Compile>
     <Compile Include="TipoComprobante.cs">
