--- a/NubeBooks/Web.config
+++ b/NubeBooks/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="LibrosDBEntities" connectionString="metadata=res://*/LibrosModel.csdl|res://*/LibrosModel.ssdl|res://*/LibrosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=LibrosDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="LibrosDBEntities" connectionString="metadata=res://*/LibrosModel.csdl|res://*/LibrosModel.ssdl|res://*/LibrosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Libros2DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=(local);Initial Catalog=LibrosDB;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+    <add name="librosdbentities" connectionString="metadata=res://*/librosmodel.csdl|res://*/librosmodel.ssdl|res://*/librosmodel.msl;provider=system.data.sqlclient;provider connection string=&quot;data source=(local);initial catalog=librosdb;integrated security=true;multipleactiveresultsets=true;app=entityframework&quot;" providerName="system.data.entityclient" />
+    <!--<add name="LibrosDBEntities" connectionString="metadata=res://*/LibrosModel.csdl|res://*/LibrosModel.ssdl|res://*/LibrosModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Libros2DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=(local);Initial Catalog=LibrosDB;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
