--- a/NubeBooks/NubeBooks.csproj
+++ b/NubeBooks/NubeBooks.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\InfoSItem.cs" />
     <Compile Include="Models\Navbar.cs" />
     <Compile Include="Models\sItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
