--- a/NubeBooks.Core.Logistics/NubeBooks.Core.Logistics.csproj
+++ b/NubeBooks.Core.Logistics/NubeBooks.Core.Logistics.csproj
@@ -54,11 +54,13 @@
     <Compile Include="BL\ItemBL.cs" />
     <Compile Include="BL\MovimientoInvBL.cs" />
     <Compile Include="BL\Reportes_InventariosBL.cs" />
+    <Compile Include="BL\ServicioBL.cs" />
     <Compile Include="BL\UbicacionBL.cs" />
     <Compile Include="DTO\CategoriaItmDTO.cs" />
     <Compile Include="DTO\FormaMovimientoInvDTO.cs" />
     <Compile Include="DTO\ItemDTO.cs" />
     <Compile Include="DTO\MovimientoInvDTO.cs" />
+    <Compile Include="DTO\ServicioDTO.cs" />
     <Compile Include="DTO\StockLoteDTO.cs" />
     <Compile Include="DTO\TipoMovimientoInvDTO.cs" />
     <Compile Include="DTO\UbicacionDTO.cs" />
